--- a/assets/theme-styles/scss/_variables.scss
+++ b/assets/theme-styles/scss/_variables.scss
@@ -6,7 +6,7 @@
     --title-weight: 700;
     --body-weight: 400;
     --border-radius: 10px;
-    --body-text: #000000;
+    --body-text: black;
     --excerpt: #999999;
     --accent: #2e6d87;
     --dark: #08445d;
@@ -14,7 +14,6 @@
     --link: #999999;
     --link-hvr: #555555;
     --nav-bg: #2e6d87;
-    --nav-link: #2e6d87;
     --subnav-link: white;
     --footer-bg: #08445d;
     --footer-link: white;
