--- a/assets/theme-styles/scss/layouts/_general.scss
+++ b/assets/theme-styles/scss/layouts/_general.scss
@@ -31,7 +31,7 @@
          margin-right: 5px;
     }
     a:not(.post-edit-link) {
-        color: var(--link);
+        color: #999999;
         &:hover {
             color: var(--link-hvr);
         }
