--- a/assets/theme-styles/scss/sections/_agents.scss
+++ b/assets/theme-styles/scss/sections/_agents.scss
@@ -3,7 +3,7 @@
 #itre-agents, body.page-template-template-team #primary {
     .itre-agent-wrapper {
         margin-bottom: 1.6em;
-        @media (min-width: 992px) {
+        @media (min-width: 62rem) {
             margin-bottom: 0;
         }
     }
