--- a/assets/theme-styles/scss/sections/_property.scss
+++ b/assets/theme-styles/scss/sections/_property.scss
@@ -20,7 +20,7 @@ body.single-property {
         }
     }
     .entry-meta {
-        color: var(--link);
+        color: #999999;
         i {
             color: var(--accent);
         }
