--- a/assets/theme-styles/scss/admin.scss
+++ b/assets/theme-styles/scss/admin.scss
@@ -1,3 +1,6 @@
+@import 'functions';
+@import 'variables';
+
 //Admin Area Styling
 
 .image_radio_button_control .radio-button-label > input {
@@ -171,7 +174,7 @@ button.def-btn {
         @media (min-width: 768px) {
             width: 50%;
         }
-        @media (min-width: 992px) {
+        @media (min-width: 62rem) {
             width: 33.33%;
         }
         figcaption {
@@ -229,35 +232,41 @@ table.compare {
 }
 
 .theme-pro {
+
+    &__content {
+        width: auto;
+    }
+
 	figure {
 		margin: 0;
+
 		@media (min-width: 768px) {
 			width: 33%;
 		}
+
 		img {
 			width: 100%;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 		}
 	}
+
 	.upsell-links {
-		margin-top: 1.625rem;
-		a {
-			font-size: 1.25rem !important;
-			margin-right: 0.375rem;
-			&:last-child {
-				margin-right: 0;
-			}
-			&.itre-pro-btn {
-				background-color: #2e6d87;
-				&:hover {
-					background-color: darken(#2e6d87, 5%);
-				}
-			}
-			&.itre-demo-btn {
-				
-			}
-		}
+        margin-top: 0.6875rem;
+
+        a {
+            padding: 0.625rem 1.25rem;
+            font-size: 1rem !important;
+            border-radius: 4px;
+
+            &.itre-pro-btn {
+                
+            }
+
+            &:first-child {
+                margin-right: 0.375rem;
+            }
+        }
 	}
 }
 
@@ -275,5 +284,135 @@ li#menu-appearance {
                 background-color: rgba(0,0,0,0.2);
             }
         }
+    }
+}
+
+#itre-admin-theme-info {
+    margin-top: 2rem;
+
+    h1 {
+        border-bottom: solid 1px #aaaaaa;
+        padding: 1rem;
+    }
+}
+
+.itre-support-plugins-form {
+    
+    table {
+        border-collapse: collapse;
+    }
+
+    th {
+        min-width: 12.5rem;
+        text-align: left;
+    }
+
+    td {
+        width: 7.25rem;
+        
+        > * {
+            float: right;
+        }
+    }
+
+    tr {
+        display: block;
+        padding: 1.25rem;
+        
+        &:nth-child(even) {
+            background-color: white;
+        }
+
+        &:nth-child(odd) {
+            background-color: rgba(#2d73ad, 0.05);
+        }
+    }
+
+    button.button-primary {
+        display: flex;
+        align-items: center;
+    }
+}
+
+.itre-support-plugins {
+
+    &__links {
+
+        button,
+        a {
+            padding: 0.75rem 1.5rem;
+            border: 0;
+            border-radius: 0.125rem;
+            cursor: pointer;
+            text-transform: uppercase;
+            font-weight: 700;
+            text-decoration: none;
+
+            &:not(:last-child) {
+                margin-right: 0.75rem;
+            }
+        }
+
+        &--demos {
+            background-color: var(--accent);
+            color: white;
+
+            &:hover,
+            &:focus {
+                color: white;
+                background-color: var(--dark);
+            }
+        }
+        
+        &--nothanks {
+            background-color: #dddddd;
+            color: #666666;
+
+            &:hover,
+            &:focus {
+                background-color: #cccccc;
+            }
+        }
+    }
+}
+
+.loader {
+    width: 1rem;
+    height: 1rem;
+    animation: svgRotate 2000ms linear infinite;
+    margin-left: 0.5rem;
+}
+
+.sep {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0,0,0,0.10);
+    margin: 3rem 0;
+    box-shadow: 0px 1px 0 rgba(255,255,255,0.75);
+}
+
+.activated {
+    line-height: 1.75rem;
+    display: flex;
+    align-items: center;
+    border: solid 1px transparent;
+
+    &:before {
+        content: "\f147";
+        font-family: "Dashicons";
+        color: #59ce15;
+        margin-right: 0.5rem;
+        font-size: 2rem;
+        line-height: 0;
+    }
+}
+
+@keyframes svgRotate {
+    0% {
+        @include transform(rotate(0deg));
+    }
+
+    100% {
+        @include transform(rotate(-360deg));
     }
 }
