--- a/assets/theme-styles/scss/layouts/_list.scss
+++ b/assets/theme-styles/scss/layouts/_list.scss
@@ -3,8 +3,8 @@
 article.list {
     .entry-meta {
         > * {
-            margin-left: 0.2em;
-            margin-right: 1.4em;
+            margin-left: 0.25rem;
+            margin-right: 1.5rem;
         }
     }
     a img {
