--- a/assets/theme-styles/scss/sections/_comments.scss
+++ b/assets/theme-styles/scss/sections/_comments.scss
@@ -4,18 +4,21 @@
 
 // The Respond Section
 #respond {
+
 	label {
-		display:inline;
+		min-width: 6rem;
 		@extend %heading-font;
+		cursor: pointer;
 	}
 	textarea {
-		padding: .5em;
+		padding: .5rem;
         background-color: #f5f5f5;
         border-radius: var(--border-radius);
 	}
 	input[type="submit"] {
 		@extend %btn;
-		background-color: var(--dark);
+		background-color: var(--accent);
+    	filter: brightness(85%) contrast(150%);
 	}
 }
 
@@ -47,35 +50,38 @@
 		}
 	}
 	ul.children {
-		padding-left: 0em;
+		padding-left: 0;
 	}
 	.comment {
-		border: solid 1px #eee;
+		border: solid 1px #eeeeee;
         border-radius: var(--border-radius);
-		padding: 1em 0.3em 1em 1em;
+		padding: 1rem 0.25rem 1rem 1rem;
 		margin-bottom: 1em;
-		.comment-author, .comment-meta {
 
-		}
 		.vcard {
-			margin-right: .75em;
+			margin-right: .75rem;
+
 			a {
 				color: var(--accent);
 			}
+
 			img {
 				border-radius: 50%;
-				margin-right: .75em;
+				margin-right: .75rem;
 			}
 		}
 		.comment-meta {
+
 			a {
 				color: rgba(0,0,0,0.5);
-				font-size: .75em;
-				letter-spacing: .05em;
-				margin-right: .75em;
+				font-size: .75rem;
+				letter-spacing: .05rem;
+				margin-right: .75rem;
 			}
 		}
+
 		.reply {
+
 			a {
 				@extend %btn;
 			}
