--- a/assets/theme-styles/scss/sections/_filter.scss
+++ b/assets/theme-styles/scss/sections/_filter.scss
@@ -19,7 +19,7 @@
 		height: 100%;
 		width: 100%;
 		border: 0;
-		border-radius: 3px;
+		border-radius: 0.25rem;
 	}
 	select {
 		background-color: white;
@@ -30,8 +30,8 @@
 		}
 	}
 	.form-control-wrapper {
-		padding-top: 0.3em;
-		padding-bottom: 0.3em;
+		padding-top: 0.3125rem;
+		padding-bottom: 0.3125rem;
 	}
 }
 
@@ -42,18 +42,23 @@
 	text-transform: uppercase;
 	border-radius: 3px;
 	font-size: 0.85em;
+
 	&.sale {
 		background-color: rgba(121,217,18,0.8);
 	}
+
 	&.rent {
 		background-color: rgba(229,209,23,0.8);
 	}
+
 	&.sold {
 		background-color: rgba(41,162,204,0.8);
 	}
+
 	&.coming-soon {
 		background-color: rgba(92,21,119,0.8);
 	}
+
 	&.active {
 		background-color: rgba(162,54,198, 0.8);
 	}
@@ -88,17 +93,22 @@ body:not(.single-property) article.type-property {
 		padding-top: 0.625rem;
 		padding-bottom: 0.75rem;
 		font-size: 0.875rem;
+
 		i {
 			color: var(--accent);
 		}
+
 		svg {
 			vertical-align: baseline;
+
 			> * {
 			   fill: var(--accent);
 		   }
 		}
+
 		> span {
 			margin-right: 0.625rem;
+
 			span {
 				margin: auto 0.25rem;
 			}
@@ -120,7 +130,7 @@ body:not(.single-property) article.type-property {
 			height: 100%;
 			border-radius: var(--border-radius);
 			box-shadow: $shadow1;
-			background-color: white;
+			background-color: rgba(255,255,255,0.1);
 			overflow: hidden;
 			.itre-prop-thumb {
 				position: relative;
@@ -154,7 +164,7 @@ body:not(.single-property) article.type-property {
 				color: black;
 			}
 			.itre_features {
-				border-top: solid 1px #eeeeee;
+				border-top: solid 1px rgba(0,0,0,0.1);
 				padding-top: 0.6em;
 				padding-bottom: 0.8em;
 				i {
