--- a/assets/theme-styles/scss/sections/_footer.scss
+++ b/assets/theme-styles/scss/sections/_footer.scss
@@ -1,7 +1,8 @@
 // Footer Styling
 
 #footer-sidebar {
-    background-color: var(--dark);
+    background-color: var(--accent);
+    filter: brightness(85%) contrast(150%);
     padding-top: 3em;
     margin-top: 2rem;
     color: white;
@@ -21,7 +22,8 @@
 }
 
 #colophon {
-    background-color: var(--dark);
+    background-color: var(--accent);
+    filter: brightness(85%) contrast(150%);
     color: white;
     text-align: center;
     a {
