--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://indithemes.com/product/it-residence
 Author: IndiThemes
 Author URI: https://indithemes.com
 Description: Create a Real Estate website and showcase your business magnificently with our free WordPress Real Estate Theme IT Residence. This theme offers a many features to showcase your properties in style. Customers can filter properties as per your requirement. Also, you can categorise your properties as per locations and types. Our theme offers seamless Google Maps integration so that you can mark your property on the map and present it effectively. IT residence is also a powerful blog theme with multiple blog layouts. IT Residence is one of the best Real Estate WordPress Themes and you are sure to love it! You can check out the theme in action at demo.indithenes.com/it-residence
-Version: 2.2.1
+Version: 2.4.4
 Tested up to: 6.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -537,9 +537,8 @@ input[type="reset"],
 input[type="submit"] {
 	border: 0;
 	border-radius: 0;
-	background: var(--dark);
 	color: white;
-	padding: 0.6em 1em 0.4em;
+	padding: 0.5rem 1em 0.4375rem;
 }
 
 button:hover,
