--- a/assets/theme-styles/css/admin.css
+++ b/assets/theme-styles/css/admin.css
@@ -165,6 +165,8 @@ button.def-btn {
 }
 #itre-admin-theme-info h2 {
   font-size: 1rem;
+  position: relative;
+  padding-bottom: 0.75rem;
 }
 @media (min-width: 48rem) {
   #itre-admin-theme-info h2 {
@@ -231,14 +233,14 @@ button.def-btn {
   }
 }
 .itre-support__content {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
 }
 
 table.compare {
   width: 100%;
   max-width: 60rem;
   border-collapse: collapse;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   margin-bottom: 4rem;
 }
 table.compare th, table.compare td {
@@ -275,11 +277,6 @@ table.compare tr:first-child {
 .theme-pro .upsell-links {
   margin-top: 0.6875rem;
 }
-.theme-pro .upsell-links a {
-  padding: 0.625rem 1.25rem;
-  font-size: 1rem !important;
-  border-radius: 4px;
-}
 .theme-pro .upsell-links a:first-child {
   margin-right: 0.375rem;
 }
@@ -295,10 +292,31 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
 
 #itre-admin-theme-info {
   margin-top: 2rem;
+  font-family: var(--title-font);
+  background-color: white;
+  padding: 1rem 1.5rem;
 }
 #itre-admin-theme-info h1 {
   border-bottom: solid 1px #aaaaaa;
-  padding: 1rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 2.5rem;
+}
+#itre-admin-theme-info h1,
+#itre-admin-theme-info h2 {
+  font-family: var(--title-font);
+}
+#itre-admin-theme-info p,
+#itre-admin-theme-info a,
+#itre-admin-theme-info ul,
+#itre-admin-theme-info button {
+  font-size: 1.25rem;
+}
+#itre-admin-theme-info ul {
+  list-style: disc;
+  margin-left: 2rem;
+}
+#itre-admin-theme-info ul li::marker {
+  color: var(--accent);
 }
 
 .itre-support-plugins-form table {
@@ -387,11 +405,11 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
 
 .itre-notice {
   font-family: var(--body-font);
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   padding-bottom: 1.25rem;
 }
 .itre-notice p, .itre-notice button {
-  font-size: 1.125rem !important;
+  font-size: 1.25rem !important;
 }
 .itre-notice h2 {
   font-size: 2rem;
@@ -401,10 +419,6 @@ li#menu-appearance ul > li a[href="themes.php?page=itre_options"]:hover, li#menu
   font-size: 1.5rem;
   font-family: var(--title-font);
   font-weight: 400;
-}
-.itre-notice ul {
-  list-style: disc;
-  margin-left: 2rem;
 }
 
 @keyframes svgRotate {
