--- a/assets/theme-styles/scss/admin.scss
+++ b/assets/theme-styles/scss/admin.scss
@@ -3,6 +3,7 @@
 
 //Admin Area Styling
 
+
 .image_radio_button_control .radio-button-label > input {
 	display: none;
 }
@@ -152,6 +153,8 @@ button.def-btn {
 
     h2 {
         font-size: 1rem;
+        position: relative;
+        padding-bottom: 0.75rem;
 
         @media (min-width: 48rem) {
             font-size: 1.5rem;
@@ -162,6 +165,7 @@ button.def-btn {
 .itre-theme-demos {
     display: flex;
     flex-wrap: wrap;
+
     figure {
         position: relative;
         box-sizing:border-box;
@@ -218,7 +222,7 @@ button.def-btn {
     }
 
     &__content {
-        font-size: 1.125rem;
+        font-size: 1.25rem;
     }
 }
 
@@ -226,7 +230,7 @@ table.compare {
     width: 100%;
     max-width: 60rem;
     border-collapse: collapse;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     margin-bottom: 4rem;
 
     th, td {
@@ -272,13 +276,6 @@ table.compare {
         margin-top: 0.6875rem;
 
         a {
-            padding: 0.625rem 1.25rem;
-            font-size: 1rem !important;
-            border-radius: 4px;
-
-            &.itre-pro-btn {
-                
-            }
 
             &:first-child {
                 margin-right: 0.375rem;
@@ -306,10 +303,35 @@ li#menu-appearance {
 
 #itre-admin-theme-info {
     margin-top: 2rem;
-
+    font-family: var(--title-font);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    
     h1 {
         border-bottom: solid 1px #aaaaaa;
-        padding: 1rem;
+        padding: 0.5rem 1.5rem;
+        font-size: 2.5rem;
+    }
+
+    h1,
+    h2 {
+        font-family: var(--title-font);
+    }
+
+    p,
+    a,
+    ul,
+    button {
+        font-size: 1.25rem;
+    }
+
+    ul {
+        list-style: disc;
+        margin-left: 2rem;
+
+        li::marker {
+            color: var(--accent);
+        }
     }
 }
 
@@ -422,11 +444,11 @@ li#menu-appearance {
 // Notice
 .itre-notice {
     font-family: var(--body-font);
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     padding-bottom: 1.25rem;
 
     p, button {
-        font-size: 1.125rem !important;
+        font-size: 1.25rem !important;
     }
     
     h2 {
@@ -438,11 +460,6 @@ li#menu-appearance {
         font-size: 1.5rem;
         font-family: var(--title-font);
         font-weight: 400;
-    }
-    
-    ul {
-        list-style: disc;
-        margin-left: 2rem;
     }
 }
 
