--- a/assets/theme-styles/css/block-styles.css
+++ b/assets/theme-styles/css/block-styles.css
@@ -1,8 +1,8 @@
 .is-style-widget-title {
   position: relative;
   margin-top: 0;
-  margin-bottom: 0.6em;
-  padding-bottom: 0.4em;
+  margin-bottom: 0.625rem;
+  padding-bottom: 0.5rem;
   font-size: 1.5rem;
 }
 .is-style-widget-title:before {
@@ -21,6 +21,21 @@
   left: 40px;
   width: 40px;
   background-color: #ddd;
+}
+
+.is-style-section-title {
+  position: relative;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.75rem;
+}
+.is-style-section-title:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .is-style-prop-table th,
