--- a/assets/theme-styles/css/main.css
+++ b/assets/theme-styles/css/main.css
@@ -1022,6 +1022,7 @@ body.single-property .entry-meta i {
 }
 body.single-property .entry-meta a {
   text-decoration: underline;
+  text-decoration-thickness: 2px;
 }
 body.single-property #property-map {
   height: 500px;
