--- a/assets/theme-styles/scss/sections/_property.scss
+++ b/assets/theme-styles/scss/sections/_property.scss
@@ -1,33 +1,42 @@
 //Styling for Property Content
 
 body.single-property {
+
     .post-thumbnail {
+
         img {
             border-radius: var(--border-radius);
         }
     }
+
     .itre-for-tag {
         color: white;
         line-height: 1;
         padding: 0.6em 0.8em 0.4em;
         text-transform: uppercase;
         font-size: 0.85em;
+
         &.sale {
             background-color: rgba(121,217,18,0.8);
         }
+
         &.rent {
             background-color: rgba(228,171,48,0.8);
         }
     }
     .entry-meta {
         color: #999999;
+
         i {
             color: var(--accent);
         }
+
         a {
             text-decoration: underline;
+            text-decoration-thickness: 2px;
         }
     }
+    
     #property-map {
         height: 500px;
         width: 100%;
