--- a/assets/theme-styles/scss/sections/_universal.scss
+++ b/assets/theme-styles/scss/sections/_universal.scss
@@ -110,7 +110,9 @@ select,
 textarea {
 	color: #666;
 	border-radius: 0px;
-	padding: 0.7em;
+	padding: 0.6875rem;
+    outline: none;
+    @include transition(all 100ms ease);
 }
 
 input[type="text"]:focus,
@@ -129,7 +131,7 @@ input[type="datetime"]:focus,
 input[type="datetime-local"]:focus,
 input[type="color"]:focus,
 textarea:focus {
-	color: #111;
+    border: solid 1px var(--accent);
 }
 
 textarea {
