--- a/assets/theme-styles/scss/block-styles.scss
+++ b/assets/theme-styles/scss/block-styles.scss
@@ -45,11 +45,12 @@
     }
 }
 
-.is-style-prop-table {
+// .is-style-prop-table {
 
     th,
     td {
         padding: 0.25em 0.625rem;
+        border: 0;
     }
 
     table {
@@ -65,6 +66,14 @@
 
                 &:nth-child(2n+1) {
                     background-color: #f5f5f5;
+                }
+
+                td {
+                    border: 0;
+
+                    &:first-child {
+                        font-weight: 700;
+                    }
                 }
             }
         }
