--- a/assets/theme-styles/scss/sections/_agents.scss
+++ b/assets/theme-styles/scss/sections/_agents.scss
@@ -2,7 +2,7 @@
 
 #itre-agents, body.page-template-template-team #primary {
     .itre-agent-wrapper {
-        margin-bottom: 1.6em;
+        margin-bottom: 1.625rem;
         @media (min-width: 62rem) {
             margin-bottom: 0;
         }
@@ -10,27 +10,33 @@
     .itre-agent {
         border-radius: var(--border-radius);
         overflow: hidden;
+
         .itre-agent-info {
-            padding: 0.4em 0.6em;
+            padding: 0.4375rem 0.625rem;
             background-color: #f5f5f5;
         }
+
         h3 {
-            margin-top: 0.25em;
+            margin-top: 0.25rem;
             margin-bottom: 0;
         }
+
         .agent-job {
             margin: 0;
             color: var(--accent);
         }
+
         .agent-desc {
-            font-size: 0.85em;
-            line-height: 1.5em;
+            font-size: 0.875rem;
+            line-height: 1.5rem;
             color: #aaaaaa;
         }
+
         .agent-social {
-            margin: 0.75em auto;
+            margin: 0.75rem auto;
+
             span {
-                font-size: 1em;
+                font-size: 1rem;
             }
         }
     }
@@ -39,17 +45,19 @@
 body.page-template-template-team {
     text-align: center;
     article {
-        margin-bottom: 1.4em;
+        margin-bottom: 1.4375rem;
         .itre-agent {
-            .agent-thumb
-            {
+
+            .agent-thumb {
                 overflow: hidden;
+
                 img {
                     filter:grayscale(1);
                     @include transition(all 300ms ease-in-out);
                 }
             }
             &:hover {
+                
                 .agent-thumb img {
                     filter: grayscale(0);
                     @include transform(scale(1.05));
